<resources>
    <string name="about_attributions_hint">Used components:</string>
    <string name="action_about">About the app</string>
    <string name="action_back">Back</string>
    <string name="action_bar_title_my_profile">My Profile</string>
    <string name="action_bar_title_timeline">Timeline</string>
    <string name="action_drawer_bb_favourites">Friends</string>
    <string name="action_drawer_favourites">Friends (%1$d)</string>
    <string name="action_drawer_nearby">Nearby</string>
    <string name="action_drawer_unknown">Unknown</string>
    <string name="action_drawer_unread">Unread</string>
    <string name="action_invite_friend">Invite a friend</string>
    <string name="action_report_bug">Report a bug</string>
    <string name="action_game_tic_tac_toe">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share WiFON</string>
    <string name="action_sort_alphabetically">Sort alphabetically</string>
    <string name="action_sort_favourites">Sort favourites first</string>
    <string name="action_sort_rating">Sort by likes</string>
    <string name="action_write_ceo">Write to the authors</string>
    <string name="activity_change_status">Change status</string>
    <string name="activity_create_profile">Your profile</string>
    <string name="activity_display_title_friends">Friends</string>
    <string name="activity_display_title_likes">People who like it</string>
    <string name="app_name">WiFON</string>
    <string name="attachment_delivered_at">Delivered at %1$s</string>
    <string name="attachment_seen_at">Seen at %1$s</string>
    <string name="attribution_freepik">Profile title pictures - Designed by Freepik.com</string>
    <string name="attribution_image_chooser">Image chooser library. Copyright 2013 Kumar Bibek. https://github.com/coomar2841/image-chooser-library</string>
    <string name="attribution_pattern1">Swirl by Uday. subtlepatterns.com</string>
    <string name="attribution_pattern2">GPlay by Dimitrie Hoekstra. subtlepatterns.com</string>
    <string name="attribution_pattern3">Gray Floral by Lauren. subtlepatterns.com</string>
    <string name="attribution_pattern4">Symphony by Irfan iLias. subtlepatterns.com</string>
    <string name="attribution_pattern5">Skulls by Adam. subtlepatterns.com</string>
    <string name="attribution_soundcloud">Android-crop library. Copyright 2015 SoundCloud. https://github.com/jdamcd/android-crop</string>
    <string name="attribution_text_drawable">Text Drawable library. Copyright Amulya Khare. https://github.com/amulyakhare/TextDrawable</string>
    <string name="cancel">Cancel</string>
    <string name="content_desc_list_pref_check">Tap to check</string>
    <string name="content_desc_logo">App logo</string>
    <string name="content_desc_photo">User picture</string>
    <string name="dialog_about_trademark" translatable="false"><![CDATA[Copyright © <a href=\"https://wifon.sk\">WiFON</a> 2014-2016]]></string>
    <string name="dialog_about_version">Version %1$s (build %2$s)</string>
    <string name="dialog_download_btn_download">Download</string>
    <string name="dialog_download_btn_not_download">Don\'t download</string>
    <string name="dialog_download_btn_only_wifi_download">Download on Wi-Fi only</string>
    <string name="dialog_download_rb_all_for_future">All files (in future, too)</string>
    <string name="dialog_download_rb_only_this">This file only</string>
    <string name="dialog_download_rb_this_and_other">This and other files (%1$d ; %2$s)</string>
    <string name="dialog_invite_profile_negative">Cancel</string>
    <string name="dialog_invite_profile_possitive">Add</string>
    <string name="dialog_invite_profile_text">Add %1$s as a friend?</string>
    <string name="dialog_invite_profile_title">Friend request</string>
    <string name="dialog_no_blocked_users">Nobody has been blocked</string>
    <string name="dialog_upload_btn_not_upload">Don\'t upload</string>
    <string name="dialog_upload_btn_only_wifi_upload">Upload on Wi-Fi only</string>
    <string name="dialog_upload_btn_upload">Upload</string>
    <string name="dialog_upload_rb_all_for_future">All files (in the future, too)</string>
    <string name="dialog_wifon_messege">Wi-Fi is off, WiFON can\'t receive nor send your messages</string>
    <string name="dialog_wifon_negative">Ignore</string>
    <string name="dialog_wifon_positive">Turn Wi-Fi on</string>
    <string name="drawer_item_people">People</string>
    <string name="emptyFavourites">Star someone as a friend!</string>
    <string name="emptyHistoryText">This is WiFON. It works like a classic Messenger but messages get delivered even without Internet connectivity, really! If you like, you can gather likes for your statuses.</string>
    <string name="emptyNearby">This is where nearby users will be shown</string>
    <string name="emptyUnknown">This is where messages from unknown users will be shown</string>
    <string name="emptyUnread">This is where unread messages will be shown</string>
    <string name="header_friends_count_hint">Friends [%1$d]:</string>
    <string name="hop_export_error">GPX export has failed</string>
    <string name="hop_install">Install</string>
    <string name="hop_installEarth">Google Earth not installed</string>
    <string name="hop_title">Installation needed!</string>
    <string name="hops_address_not_found">Detailed description is not available</string>
    <string name="hops_not_enough_addresses">Insufficient addresses to show</string>
    <string name="hops_title">Message visited following places</string>
    <string name="invite_profile_subject">%1$s: Friend request from %2$s</string>
    <string name="invite_profile_text">Hi,\n\nI\'d like to communicate with you via an app called %1$s. If you don\'t have the app installed, you can find it on the Play Store: https://play.google.com/store/apps/details?id=com.croconaut.ratemebuddy.\n\nIf you do, just click on %2$s, open it in %1$s and add me as your friend!\n\n%3$s.</string>
    <string name="invite_profile_text_hml"><![CDATA[ <p>Hi,</p><p>I\'d like to communicate with you via an app called <a href="https://wifon.sk">%1$s</a>. It allows you to chat with your friends nearby without Internet connectivity or even use other people\'s phones as a carrier for your messages. If you don\'t have the app installed, you can find it on the <a href="https://play.google.com/store/apps/details?id=com.croconaut.ratemebuddy">Play Store</a>.</p><p>If you do, just <a href="%2$s">click here</a>, open it in %1$s and add me as your friend!</p></p>%3$s</p> <p>-----------------------------------------------------------</p> <hr style="background-color: red; height: 1px; border: 0;"> <p>Ahoj,</p><p>chcel(a) by som si s Tebou písať cez appku <a href="https://wifon.sk">%1$s</a>. Táto appka Ti umožní písať si s priateľmi v okolí bez pripojenia na Internet alebo dokonca využiť niekoho iného telefón ako poštára pre Tvoje správy. Ak appku %1$s ešte nemáš, nájdeš ju na <a href="https://play.google.com/store/apps/details?id=com.croconaut.ratemebuddy">Play Store</a>.</p><p>Ak %1$s už máš, <a href="%2$s">klikni sem</a>, otvor linku v appke a pridaj si ma ako priateľa!</p></p>%3$s</p> ]]></string>
    <string name="message_add_new_status">Add new status</string>
    <string name="message_deleted">Message couldn\'t have been delivered</string>
    <string name="message_detail_hop_archived">Pending for delivery confirmation, the route will be displayed here.</string>
    <string name="message_detail_view_on_earth">Tap to show in Google Earth</string>
    <string name="message_download_state_cancelled">Download cancelled</string>
    <string name="message_download_state_downloading">Download in progress</string>
    <string name="message_download_state_finished">Downloaded</string>
    <string name="message_download_state_waiting_for_confirm">Waiting for confirmation</string>
    <string name="message_download_state_waiting_for_download">Waiting for download</string>
    <string name="message_menu_copy">Copy message text</string>
    <string name="message_menu_copy_toast">Message text copied</string>
    <string name="message_menu_delete">Delete</string>
    <string name="message_menu_details">Show detail</string>
    <string name="message_menu_resend">Forward</string>
    <string name="message_not_delivered">Waiting for delivery</string>
    <string name="message_these_people_liked">People who like it:</string>
    <string name="message_timeline_comment_incoming">%1$s has commented your status: &lt;br /> &lt;b> %2$s &lt;/b></string>
    <string name="message_timeline_comment_outgoing">You has commented on %1$s\'s status: &lt;br /> &lt;b> %2$s &lt;/b></string>
    <string name="message_timeline_file_accepted">File %1$s downloaded</string>
    <string name="message_timeline_intro">Welcome %1$s. This is your timeline. You\'ll find status changes of your friends, along with the files and likes you\'ve received.</string>
    <string name="message_upload_state_cancelled">Upload cancelled</string>
    <string name="message_upload_state_uploaded_to_recipient">Uploaded to recipient</string>
    <string name="message_upload_state_uploaded_to_server">Uploaded to server</string>
    <string name="message_upload_state_uploading">Upload in progress</string>
    <string name="message_upload_state_waiting_for_upload">Waiting for upload</string>
    <string name="message_new_hint">New message!</string>
    <string name="comment_new_hint">New comment!</string>
    <string name="no_statuses">No previous statuses</string>
    <string name="notif_first_time_nearby_text">Tap to see the complete list</string>
    <string name="notif_first_time_nearby_title">%1$s is nearby!</string>
    <string name="notif_old_comment_title">Comment to an old status received!</string>
    <string name="prefs_advanced_settings_sum">Change Wi-Fi communication settings</string>
    <string name="prefs_advanced_settings_title">Wi-Fi settings</string>
    <string name="prefs_blocked_users_sum">Blocked people</string>
    <string name="prefs_blocked_users_title">Blocked people</string>
    <string name="prefs_category_privacy_title">Privacy</string>
    <string name="prefs_color_scheme_sum">Colour of UI components</string>
    <string name="prefs_color_scheme_title">Colour theme</string>
    <string name="prefs_display_info_summary">Share my name and position in message\'s detail</string>
    <string name="prefs_display_info_title">Device information</string>
    <string name="prefs_enable_notifi_sound_title">Allow sound notifications</string>
    <string name="prefs_enable_notifi_sum">Allow system tray notifications</string>
    <string name="prefs_enable_notifi_title">Enable notifications</string>
    <string name="prefs_internet_server_summary">Messages will use WiFON server as another peer</string>
    <string name="prefs_internet_server_title">Use Internet server</string>
    <string name="prefs_more_settings">Advanced</string>
    <string name="prefs_notifi_nearby_sum">Notify if somebody shows up nearby after a while</string>
    <string name="prefs_notifi_nearby_title">Notification about nearby people</string>
    <string name="prefs_notifi_sound_ringtone_sum">Choose custom sound notifications</string>
    <string name="prefs_notifi_sound_ringtone_title">Custom notification</string>
    <string name="prefs_notifi_title">Notifications</string>
    <string name="prefs_notifi_vibrate_title">Vibration</string>
    <string name="prefs_show_me_as_friend_summary">Others will see who added you as a friend</string>
    <string name="prefs_show_me_as_friend_title">Show me in the friend list</string>
    <string name="prefs_ui_title">UI</string>
    <string name="dialog_about_mail_croco" translatable="false">developer@wifon.sk</string>
    <string name="prefs_notifi_vibrate_sum"></string>
    <string name="prefs_enable_notifi_sound_sum"></string>
</resources>