<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp"
              android:id="@+id/fdBackground"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/ivMimeType"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="?attr/statsSelector"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvFileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textStyle="italic"/>

    <CheckBox
        android:id="@+id/cbEvenInFuture"
        android:layout_width="wrap_content"
        android:text="@string/dialog_upload_rb_all_for_future"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/statsSelector"
            android:textStyle="bold"
            android:text="@string/dialog_upload_btn_upload"
            android:textColor="@color/material_white"/>

        <Button
            android:id="@+id/btnUploadOnlyWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/statsSelector"
            android:textStyle="bold"
            android:text="@string/dialog_upload_btn_only_wifi_upload"
            android:textColor="@color/material_white"/>

        <Button
            android:id="@+id/btnNotUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="?attr/statsSelector"
            android:textStyle="bold"
            android:text="@string/dialog_upload_btn_not_upload"
            android:textColor="@color/material_white"/>

    </LinearLayout>


</LinearLayout>